--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 					<span class="heading-primary--main">Outdoors</span>
 					<span class="heading-primary--sub">is where life happens</span>
 				</h1>
-
 				<a href="#" class="btn btn--white btn--animated">Discover our tours</a>
 			</div>
 		</header>
@@ -209,6 +208,50 @@
 				<div class="u-center-text u-margin-top-huge">
 					<a href="#" class="btn btn--green">Discover all tours</a>
 				</div>
+			</section>
+
+			<section class="section-stories">
+				<div class="bg-video">
+					<video class="bg-video__content" autoplay muted loop>
+						<source src="img/video.mp4" type="video/mp4">
+						<source src="img/video.webm" type="video/webm">
+							Your browser is not supported!
+					</video>
+				</div>
+				<div class="u-center-text u-margin-bottom-big">
+					<h2 class="heading-secondary">
+						We make people genuinely happy
+					</h2>
+				</div>
+				<div class="row">
+					<div class="story">
+						<figure class="story__shape">
+							<img src="img/nat-8.jpg" alt="Person on a tour" class="story__image">
+							<figcaption class="story__caption">Mary Smith</figcaption>
+						</figure>
+						<div class="story__text">
+							<h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur hic pariatur reprehenderit atque laborum consequuntur sed facere optio unde quia corporis, nostrum praesentium quas, nesciunt iusto.</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="story">
+						<figure class="story__shape">
+							<img src="img/nat-9.jpg" alt="Person on a tour" class="story__image">
+							<figcaption class="story__caption">Jack Wilson</figcaption>
+						</figure>
+						<div class="story__text">
+							<h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different</h3>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur hic pariatur reprehenderit atque laborum consequuntur sed facere optio unde quia corporis, nostrum praesentium quas, nesciunt iusto.</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="u-center-text u-margin-top-huge">
+					<a href="#" class="btn-text">Read all Stories  &rarr;</a>
+				</div>
+
 			</section>
 		</main>
 	</body>
