--- a/index.html
+++ b/index.html
@@ -298,7 +298,31 @@
 					</div>
 				</div>
 			</section>
-
 		</main>
+
+		<footer class="footer">
+			<div class="footer__logo-box">
+				<img src="img/logo-green-2x.png" alt="Full Logo" class="footer__logo">
+				<div class="row">
+					<div class="col-1-of-2">
+						<div class="footer__navigation">
+							<ul class="footer__list">
+								<li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+								<li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+								<li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+								<li class="footer__item"><a href="#" class="footer__link">Privacy</a></li>
+								<li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-1-of-2">
+						<p class="footer__copyright">
+							Built by <a href="#" class="footer__link">Yu Xuan Wu</a> for online course <a href="" class="footer__link">Advanced CSS and Sass</a>. Copyright &copy; by Yu Xuan Wu. You are 100% allowed to use this webpage for personal and commercial use, but NOT to claim it as your own design. Credit to the original author, Jonas Schmedtmann, is of course highly appreciated!
+						</p>
+					</div>
+				</div>
+
+			</div>
+		</footer>
 	</body>
 </html>
