--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
 		<link rel="stylesheet" href="css/icon-font.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="shortcut icon" type="image/png" href="img/favicon.png">
@@ -13,6 +12,26 @@
 		<title>Natours | Exciting tours for adventurous people</title>
 	</head>
 	<body>
+		
+		<div class="navigation">
+			<input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+			<label for="navi-toggle" class="navigation__button">
+				<span class="navigation__icon">&nbsp;</span>
+			</label>
+
+			<div class="navigation__background">&nbsp;</div>
+
+			<nav class="navigation__nav">
+				<ul class="navigation__list">
+					<li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+					<li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
+					<li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+					<li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+					<li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book Now</a></li>
+				</ul>
+			</nav>
+		</div>
+
 		<header class="header">
 			<div class="header__logo-box">
 				<img class="header__logo" src="img/logo-white.png" alt="Logo">
@@ -321,7 +340,6 @@
 						</p>
 					</div>
 				</div>
-
 			</div>
 		</footer>
 	</body>
