--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 									<div class="card__price-box">
 										<p class="card__price-only">Only</p>
 										<p class="card__price-value">$297</p>
-										<a href="#" class="btn btn--white">Book Now!</a>
+										<a href="#popup" class="btn btn--white">Book Now!</a>
 									</div>
 								</div>
 							</div>
@@ -182,7 +182,7 @@
 									<div class="card__price-box">
 										<p class="card__price-only">Only</p>
 										<p class="card__price-value">$497</p>
-										<a href="#" class="btn btn--white">Book Now!</a>
+										<a href="#popup" class="btn btn--white">Book Now!</a>
 									</div>
 								</div>
 							</div>
@@ -215,7 +215,7 @@
 									<div class="card__price-box">
 										<p class="card__price-only">Only</p>
 										<p class="card__price-value">$897</p>
-										<a href="#" class="btn btn--white">Book Now!</a>
+										<a href="#popup" class="btn btn--white">Book Now!</a>
 									</div>
 								</div>
 							</div>
@@ -342,5 +342,21 @@
 				</div>
 			</div>
 		</footer>
+
+		<div class="popup" id="popup">
+			<div class="popup__content">
+				<div class="popup__left">
+					<img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+					<img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+				</div>
+				<div class="popup__right">
+					<a href="#section-tours" class="popup__close">&times;</a>
+					<h2 class="heading-secondary u-margin-bottom-medium">Start Booking Now</h2>
+					<h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+					<p class="popup__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis consequatur autem id sapiente perferendis! Deleniti inventore, sed enim, a eius perferendis corrupti animi nobis doloremque officia nemo, deserunt cumque alias.</p>
+					<a href="#" class="btn btn--green">Book Now</a>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
